--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,39 @@
 sass:
   sass_dir: assets/sass
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Ryan Rubenzahl
+subtitle:
+description: >- # this means to ignore newlines until "baseurl:"
+  Ryan Rubenzahl's Website!
+author: Ryan Rubenzahl
+email: rrubenza@caltech.edu
+#avatar: assets/images/avatar.jpg
+
+# You'll want to customize url and baseurl for your own site:
+# baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
+baseurl: "/"
+url: "" # the base hostname & protocol for your site
+
+# Social settings
+# Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
+twitter_url: https://twitter.com/RyanRubenzahl
+facebook_url:
+googleplus_url:
+instagram_url:
+linkedin_url: https://linkedin.com/in/ryanrubenzahl
+github_url: https://github.com/rrubenza
+stackoverflow_url:
+pinterest_url:
+slack_url:
+dribbble_url:
+
+# Google Analytics Tracking ID goes here:
+google_analytics:
+
+remote_theme: stellar 
+collections: [sections]
