--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,7 @@ author: Ryan Rubenzahl
 email: rrubenza@caltech.edu
 #avatar: assets/images/avatar.jpg
 
-# You'll want to customize url and baseurl for your own site:
-# baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
-baseurl: "/"
-url: "" # the base hostname & protocol for your site
-
 # Social settings
-# Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
 twitter_url: https://twitter.com/RyanRubenzahl
 facebook_url:
 googleplus_url:
@@ -35,5 +29,5 @@ dribbble_url:
 # Google Analytics Tracking ID goes here:
 google_analytics:
 
-remote_theme: stellar 
+#remote_theme: stellar 
 collections: [sections]
